--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                     /*color,fontsize,background color
             -->
             <h1>upcoming movie</h1>
+            <h2>new movies</h2>
             
                       <a href="upcomingmovie.html">upcoming movie</a><hr>
             <h1>manipur issue</h1>
